@@ -5,6 +5,8 @@ o Do not exit ipmi-sensors or ipmimonitoring for sensors that return
   output, etc. as needed.
 o Fix bug in ipmi-sensors and ipmimonitoring when dealing with
   optional sensor state assertions after a sensor read.
+o Fix bug in ipmi-sensors and ipmimonitoring when dealing with
+  reserved fields in sensor state assertions after a sensor read.
 o Add workaround in ipmi-sensors and ipmimonitoring when dealing with
   sensors that improperly report no sensor assertions after a sensor read.
 o Fix minor corner cases.
